# yolo-zeroshot-material-stock-mapping

./: LICENSE  README.md
agreement_layer/: agreement_layer_claude.csv  agreement_layer_gemini.csv  agreement_layer_gpt.csv  build_agreement_layer.py
data/: README.roboflow.txt  benchmark_dataset  benchmark_dataset.csv
data/test/: _annotations.coco.json
data/train/: _annotations.coco.json
data/valid/: _annotations.coco.json
interactive maps/: interactive_material fraction map_YOLO.html  interactive_wwr_map_YOLO.html
outputs/yolo/: curated_full_results.csv  curated_material_ratios.csv  curated_wwr_from_annotations.csv  raw_gsv_results.csv
outputs/zero_shot/: curated_full_results_claude.csv  curated_full_results_gemini.csv  curated_full_results_gpt.csv  per_class_f1_strict_vs_lenient.csv  raw_gsv_results_claude.csv  raw_gsv_results_gemini.csv  raw_gsv_results_gpt.csv  summary_stats.txt
pipelines/yolo/: Facade_Material_Segmentation_v2 (1).ipynb
pipelines/zero_shot/: README.md  config.py  data_loader.py  evaluation.py  main.py  materials_utils.py  preprocess.py  pyproject.toml  run_new_data.py  visualize.py
pipelines/zero_shot/models/: claude_vision.py  clip_model.py  gdino_model.py  gdino_sam_model.py  gemini_vision.py  gpt_vision.py  llava_model.py  prompts.py  wwr_utils.py  yolo_world_model.py
