[project]
name = "ae-cs"
version = "0.1.0"
description = "Zero-shot building facade analysis"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "transformers>=4.36.0",
    "bitsandbytes>=0.41.0",
    "accelerate>=0.25.0",
    "Pillow>=10.0.0",
    "pandas>=2.0.0",
    "tqdm>=4.65.0",
    "scikit-learn>=1.3.0",
    "ultralytics>=8.1.0",
    "openai>=1.3.0",
    "google-genai>=1.0.0",
    "matplotlib>=3.7.0",
    "python-pptx>=1.0.2",
]
